@@ -15,6 +15,11 @@ system (for unknown, but legitimate senders).  TMDA strives to be more
 effectual, yet less time-consuming than traditional filters.
 <br><br>
 
+TMDA also acts as a local mail delivery agent, with a flexible 
+<a href="config-filter.html">filtering language</a> that allows fine-grained
+control over how incoming and outgoing mail is delivered and sent.
+<br><br>
+
 <u>TMDA's Whitelist-centric Strategy</u>&nbsp;&nbsp;
 <strong>``Deny everything that is not <em>explicitly allowed</em>''</strong><br>
 <br>
