@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Jan 14 18:49:35 2002 -->
+<!-- Thu Feb 28 18:03:55 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -144,6 +144,11 @@ TMDA combines a "whitelist" (for known/trusted senders), a "blacklist"
 (for undesired senders), and a cryptographically enhanced confirmation
 system (for unknown, but legitimate senders).  TMDA strives to be more
 effectual, yet less time-consuming than traditional filters.
+<br><br>
+
+TMDA also acts as a local mail delivery agent, with a flexible 
+<a href="config-filter.html">filtering language</a> that allows fine-grained
+control over how incoming and outgoing mail is delivered and sent.
 <br><br>
 
 <u>TMDA's Whitelist-centric Strategy</u>&nbsp;&nbsp;
